<resources>
    <string name="app_name" translatable="false">app.gogo.tattoo</string>
    <string name="app_name_short" translatable="false">gogo.tattoo</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to gogo.tattoo Android app.</string>
    <string name="description">Recognition for artists, trust for clients, authenticity for tattoos</string>
    <string name="hint_tattoo_title">Tattoo title</string>
    <string name="hint_made_at">Where was it made?</string>
    <string name="hint_made_by">Who made it?</string>
    <string name="hint_made_date">When was it made? Today?</string>
    <string name="share_to">Share to…</string>
    <string name="hint_time_elapsed">How long time did it take to make?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_made_city">City?</string>
    <string name="hint_made_country">Country?</string>
    <string name="tags">Tags</string>
    <string name="body_parts">Body parts</string>
    <string name="test_link_wait">Hold on a second…</string>
    <string name="test_link_available">[available]</string>
    <string name="test_link_taken">[taken]</string>
    <string name="new_tattoo">New tattoo</string>
    <string name="tattoo">Tattoo</string>
    <string name="design">Design</string>
    <string name="henna">Henna</string>
    <string name="piercing">Piercing</string>
    <string name="dreaklocks">Locks</string>
    <string name="hint_piercing_title">Any cool name?</string>
    <string name="submit_success">New artwork is submitted successfully</string>
    <string name="submit_fail">Something went wrong</string>
    <string name="hint_title">Artwork title</string>
    <string name="nothing_here_yet">Nothing here yet.</string>
    <string name="slogan">Our mission is to better the world of tattoos</string>
    <string name="tv_made_date">Made: %s</string>
    <string name="tv_publish_date">Published: %s</string>
    <string name="photo_download_succeess">Photo was downloaded to your SDCard successfully</string>
    <string name="photo_download_fail">Something went wrong</string>
    <string name="photo_download_started">Downloading this photo to SD card…</string>
    <string name="save_to_phone">Save to Phone</string>
    <string name="refresh_image">Refresh</string>
    <string name="share_all">Share all</string>
    <string name="share_original_to">Share original file</string>
    <string name="photo_download_for_sharing">Fetching image to share…</string>
    <string name="something_went_wrong">Something went wrong, please report an issue ; )</string>
    <string name="upload_photo">Upload photo</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="error_camera_capture">Error while capturing image.</string>
    <string name="gallery_cancelled">Cancelled</string>
    <string name="title_activity_artworks">Artworks</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="error_please_give_title">Please give a title to this work</string>
    <string name="delete">Delete</string>
    <string name="previous_work"><![CDATA[< Previous]]></string>
    <string name="next_work"><![CDATA[Next >]]></string>
    <string name="copy_link">Copy link</string>
    <string name="copy_link_github">Copy link (github)</string>
    <string name="copy_success">Copied: %s</string>
    <string name="copy_link_steem">Copy Steemit link</string>
    <string name="copy_link_golos">Copy Golos link</string>
    <string name="watch_process_video">Watch Video</string>
    <string name="open_url">Open</string>
    <string name="upload_process_photo">Upload process photo</string>
    <string name="upload_final_photo">Upload final photo</string>
    <string name="upload_video">Upload Video</string>
    <string name="title_activity_share_artwork">Sharing is caring...</string>
    <string name="error_choose_artist_first">Please choose an artist with long tap first.</string>
</resources>
